--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     "homepage": "https://github.com/alive2212/laravelonionpattern",
     "keywords": ["Laravel", "LaravelOnionPattern"],
     "require": {
-        "illuminate/support": "~8"
+        "illuminate/support": ">=8"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8",
-        "orchestra/testbench": "~3.0"
+        "phpunit/phpunit": ">=8",
+        "orchestra/testbench": ">=3.0"
     },
     "autoload": {
         "psr-4": {
